package nl.stenden.youri.presentationviewer.model.dto;

import lombok.Data;
import lombok.EqualsAndHashCode;

/**
 * deze classe is een image representatie voor een data transfer object image element binnen een data transfer object slide element
 */
@EqualsAndHashCode(callSuper = true)
@Data
public class ImageDto extends BaseDto {

}
