package nl.stenden.youri.presentationviewer.model.dto;

import lombok.Data;
import lombok.EqualsAndHashCode;

/**
 * deze classe is een Text representatie voor een data transfer object Text element binnen een data transfer object slide element
 */
@EqualsAndHashCode(callSuper = true)
@Data
public class TextDto extends TextBaseDto {
}
